add chart for statistic

--- a/views/content/event.ejs
+++ b/views/content/event.ejs
@@ -5,25 +5,35 @@
                 <div class="banner-gift-card">
                     <h2><img alt="" src="https://www.cgv.vn/media/wysiwyg/giftcard/gift-card-1.png" "=" "></h2>
 </div>
-<div class="about-gift-card ">
-<div class="title-gift-card ">
+<div class=" about-gift-card ">
+<div class=" title-gift-card ">
 <h1>Thẻ quà tặng</h1>
 </div>
-<div class="content-about-gift-card ">
-<div class="row-1-about-gift-card ">
+<div class=" content-about-gift-card ">
+<div class=" row-1-about-gift-card ">
 <p>Một Chút Phim hân hạnh phát hành Thẻ Quà Tặng - Phương tiện thanh toán hiện đại và thuận tiện. Đây là một món quà điện ảnh tuyệt vời mà bạn có thể chia sẻ và gửi tặng bạn bè, gia đình, đồng nghiệp và đối tác. Chắc chắn đây sẽ là món quà ngập tràn sắc màu điện ảnh thật ý nghĩa và tuyệt vời dành cho những người bạn yêu quý.</p>
 <p><strong>Thẻ Quà Tặng Một Chút Phim </strong> là loại thẻ trả trước. Với số tiền trong thẻ, bạn có thể sử dụng Thẻ để đổi vé xem phim hoặc bất kì sản phẩm nào tại quầy Bắp Nước của <strong>Một Chút Phim </strong>.Với vẻ ngoài sang trọng và sự tiện lợi, bạn có thể lựa chọn các mệnh giá cho Thẻ Quà Tặng như 300.000đ; 500.000đ; hoặc 1.000.000đ. Thẻ có thời hạn sử dụng trong 1 năm và đặc biệt bạn có thể nạp thêm tiền để gia hạn bất cứ lúc nào. Bạn có thể mua thẻ thật dễ dàng mà không cần đăng ký thông tin chủ thẻ.</p>
 </div>
-<div class="row-2-about-gift-card ">
-<h2><img alt=" " src="https://www.cgv.vn/media/wysiwyg/giftcard/gift-card-2.png " "=""></h2>
+<div class=" row-2-about-gift-card ">
+<h2><img alt=" " src=" https://www.cgv.vn/media/wysiwyg/giftcard/gift-card-2.png " "=""></h2>
                     <ul>
-                        <li><strong>Thẻ Quà Tặng Một Chút Phim </strong> là loại thẻ trả trước. Với số tiền trong thẻ, bạn có thể sử dụng Thẻ để đổi vé xem phim hoặc bất kì sản phẩm nào tại quầy Bắp Nước của <strong>Một Chút Phim </strong>.</li>
-                        <li>Với vẻ ngoài sang trọng và sự tiện lợi, bạn có thể lựa chọn các mệnh giá cho Thẻ Quà Tặng như 300.000đ; 500.000đ; hoặc 1.000.000đ. Thẻ có thời hạn sử dụng trong 1 năm và đặc biệt bạn có thể nạp thêm tiền để gia hạn bất cứ lúc nào.&nbsp;Bạn
+                        <li><strong>Thẻ Quà Tặng Một Chút Phim </strong> là loại thẻ trả trước. Với số tiền trong thẻ,
+                            bạn có thể sử dụng Thẻ để đổi vé xem phim hoặc bất kì sản phẩm nào tại quầy Bắp Nước của
+                            <strong>Một Chút Phim </strong>.
+                        </li>
+                        <li>Với vẻ ngoài sang trọng và sự tiện lợi, bạn có thể lựa chọn các mệnh giá cho Thẻ Quà Tặng
+                            như 300.000đ; 500.000đ; hoặc 1.000.000đ. Thẻ có thời hạn sử dụng trong 1 năm và đặc biệt bạn
+                            có thể nạp thêm tiền để gia hạn bất cứ lúc nào.&nbsp;Bạn
                             có thể mua thẻ thật dễ dàng mà không cần đăng ký thông tin chủ thẻ.</li>
-                        <li>Thẻ quà tặng đang được bán tại quầy vé các rạp <strong>Một Chút Phim  </strong>trên toàn quốc, hoặc bạn có thể mua thẻ quà tặng điện tử tại <a href="https://www.cgv.vn/default/online-store/gift-card.html" target="_blank">đây</a>.
-                            Thẻ quà tặng có thể được tích hợp vào tài khoản thành viên, và thanh toán tiện lợi bằng thẻ thành viên khi không mang theo thẻ quà tặng.</li>
-                        <li>Hiện có loại thẻ quà tặng cho công ty / tổ chức khi bạn mua vé với số lượng lớn. Đặc biệt bạn có thể đưa logo và thông điệp của công ty / tổ chức vào thẻ. Gọi bộ phận Bán Vé Nhóm (Group Sales) để biết thêm thông tin: <strong> +84-8-3822-0333 </strong></li>
-                        <li>Các câu hỏi thường gặp, vui lòng <a href="https://www.cgv.vn/default/faq/#tabs-4" target="_blank">xem ở đây</a>.</li>
+                        <li>Thẻ quà tặng đang được bán tại quầy vé các rạp <strong>Một Chút Phim </strong>trên toàn
+                            quốc, hoặc bạn có thể mua thẻ quà tặng điện tử tại <a
+                                href="https://www.cgv.vn/default/online-store/gift-card.html" target="_blank">đây</a>.
+                            Thẻ quà tặng có thể được tích hợp vào tài khoản thành viên, và thanh toán tiện lợi bằng thẻ
+                            thành viên khi không mang theo thẻ quà tặng.</li>
+                        <li>Hiện có loại thẻ quà tặng cho công ty / tổ chức khi bạn mua vé với số lượng lớn. Đặc biệt
+                            bạn có thể đưa logo và thông điệp của công ty / tổ chức vào thẻ. Gọi bộ phận Bán Vé Nhóm
+                            (Group Sales) để biết thêm thông tin: <strong> +84-8-3822-0333 </strong></li>
+                        <li>Các câu hỏi thường gặp, vui lòng <a href="">xem ở đây</a>.</li>
                     </ul>
                 </div>
             </div>
