--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- BIỂU ĐỒ -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/public/js/chart.js"></script>
 </head>
 
 <body>
@@ -38,11 +42,11 @@
             <ul class="nav nav-pills flex-column mb-auto navbar-nav">
                 <li>
                     <i class="fas fa-user-shield me-2"></i>
-                    <a href="/admin" id="logo" class="active">Admin</a>
+                    <a href="/admin" id="logo" class="active">Dashboard</a>
                 </li>
                 <li>
                     <i class="far fa-calendar-minus mr-2"></i>
-                    <a href="/admin/showtime">Quản lý xuất chiếu</a>
+                    <a href="/admin/showtime">Quản lý suất chiếu</a>
                 </li>
                 <li>
                     <i class="fas fa-film mr-2"></i>
@@ -70,7 +74,10 @@
         <div style="width: 1222px; float: left; right: 20px; margin-left: 280px;">
             <% if(typeof filmStatistic !=='undefined' && typeof cineplexStatistic !=='undefined' ) { %>
                 <% include admin/stats %>
-                    <% } %>
+                    <% } %>/
+                        <!-- <% if(typeof statistic !=='undefined' ) { %>
+                <% include admin/stats2 %>
+                    <% } %> -->
                         <% if(typeof showtime !=='undefined' ) { %>
                             <% include admin/showtime %>
                                 <% } %>
