--- a/public/css/signUp.css
+++ b/public/css/signUp.css
@@ -189,7 +189,6 @@ input[type="checkbox"] {
 }
 
 .login-options h4 {
-    float: left;
     font-weight: 600;
     font-size: 15px;
     color: #7d91aa!important;
@@ -197,7 +196,8 @@ input[type="checkbox"] {
 
 .login-options .social-icons {
     float: right;
-    padding-top: 3px;
+    padding-top: 8px;
+    padding-left: 10px !important;
 }
 
 .social-icons li {
